# photobooth

./: .env.example  .gitignore  README.md  booth.toml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.agents/: optimize-state.json
.agents/rules/: api-proxy.md  git-workflow.md  no-spontaneous-implementation.md
.agents/skills/: grill-me.md
.agents/workflows/: create-userstory.md  done-userstory.md  optimize.md  refine-userstory.md  start-userstory.md
_backlog/: _TEMPLATE.md  ✅ STORY-001-app-restructure-naming.md  ✅ STORY-002-booth-api-connection-resilience.md  ✅ STORY-004-github-actions-deployment.md  🆕 STORY-003-migrate-postgresql.md  🔨 STORY-004-github-actions-deployment.md  🔨 STORY-005-viewer-ux-redesign.md  🔨 STORY-006-admin-event-detail-ux.md
admin/: Dockerfile  package-lock.json
ansible/: inventory.ini  setup.yml
apps/api/: Dockerfile  Dockerfile.prod  pyproject.toml
apps/api/src/api/: __init__.py  __main__.py  app.py  config.py  database.py
apps/api/src/api/api/: auth.py  booths.py  events.py  photos.py  public.py
apps/api/src/api/auth/: oauth2.py  otp.py  permissions.py
apps/api/src/api/email/: __init__.py  sender.py
apps/api/src/api/models/: db.py  schemas.py
apps/api/src/api/ws/: admin_ws.py  booth_ws.py  hub.py
booth/: booth.toml  pyproject.toml
booth/ansible/: deploy.yml
booth/ansible/templates/: plymouth-script.j2  xinitrc.j2
booth/assets/luts/: golden_hour.cube
booth/deploy/: README_PI.md
booth/locales/: en.toml
booth/src/photobooth/: __init__.py  app.py  config.py
booth/src/photobooth/services/: agent.py  gphoto2_camera.py  led.py  print_layouts.py  storage.py
booth/src/photobooth/ui/: screens.py
locales/: nl.toml
public/: Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: screenshot_all_screens.py
server/: Dockerfile  pyproject.toml
shared/: __init__.py  card_layout.json  constants.py
tests/: test_camera.py  test_config.py  test_i18n.py  test_processing.py  test_screens.py  test_ui_artifacts.py
(+140 files in other folders)
