[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photobooth"
version = "0.1.0"
description = "A touchscreen photobooth application for Raspberry Pi 4"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jasper Steenweg" },
]

dependencies = [
    "kivy>=2.3.0",
    "ffpyplayer>=4.5",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "qrcode>=7.4",
]

[project.optional-dependencies]
pi = [
    "gphoto2>=2.5",
    "pycups>=2.0",
    "opencv-python-headless>=4.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
photobooth = "photobooth.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
