[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photobooth-api"
version = "0.1.0"
description = "Photobooth API — REST API + WebSocket hub"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jasper Steenweg" },
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
